--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en" dir="ltr">
 
 
-<link rel="stylesheet" href="/home/bigmoneygelo/ecom site/css/layout.css">
+<link rel="stylesheet" href="layout.css">
 
 
     <meta charset="utf-8">
@@ -20,17 +20,17 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="/home/bigmoneygelo/demo websites 1-4/ecom site/html/about.html">About</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </nav>
 
 <body>
   <div class="PB">
-    <img class="header-img"src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (21).jpeg" alt="">
+    <img class="header-img"src="download (21).jpeg" alt="">
     <h1 class="prod1">We Wholesale Shirts</h1>
     <h3 class="prod2">In all colors and sizes</h3>
     <div class="p1">
-      <a href="/home/bigmoneygelo/demo websites 1-4/ecom site/html/products.html">
+      <a href="products.html">
         <button class="p1 prod"type="button" name="button">products</button>
     </a>
     </div>
@@ -45,7 +45,7 @@
         <h6 class=h6-sec1>Shirt Colors</h6>
         <div class="img-col">
           <h6 class="h6-1">We have many different color shirts</h3>
-          <img class="sub-img"src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (1).jpeg" alt="">
+          <img class="sub-img"src="download (1).jpeg" alt="">
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
           <h6 class=h6-sec1>Shirt Sizes</h6>
           <div class="img-col">
             <h6 class="h6-1">We have many different shirt sizes</h6>
-            <img class="sub-img"src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (2).jpeg" alt="">
+            <img class="sub-img"src="download (2).jpeg" alt="">
             </div>
           </div>
 
@@ -64,7 +64,7 @@
             <div class="sub-sec1">
               <div class="img-col">
                 <h6 class="h6-1">We deliver everywhere, including international</h3>
-                  <img class="sub-img"src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (3).jpeg" alt="">
+                  <img class="sub-img"src="download (3).jpeg" alt="">
                 </div>
               </div>
             </div>
