--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<link rel="stylesheet" href="/home/bigmoneygelo/demo websites 1-4/ecom site/css/about.css">
+<link rel="stylesheet" href="about.css">
 <meta charset="utf-8">
 
     <title>About Us</title>
@@ -9,7 +9,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
+         <!--<li><a href="contact.html">Contact</a></li>-->
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
@@ -23,7 +23,7 @@
 
 
         <div class="img-1">
-          <img class="img-1" src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download.jpeg" alt="">
+          <img class="img-1" src="download.jpeg" alt="">
         </div>
 
 
@@ -33,12 +33,12 @@
 
         <h1>Many Different Color Shirts</h1>
         <div class="img-1-2">
-          <img class="img-2"src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (6).jpeg" alt="">
+          <img class="img-2"src="download (6).jpeg" alt="">
 
           <h1 class="h1-2-1">Shirt Sizes</h1>
           <h1>Many Different Shirt Sizes</h1>
           <h1 class="h1-1-bio"> </h1>
-          <img src="/home/bigmoneygelo/demo websites 1-4/ecom site/imgs/download (18).jpeg" alt="">
+          <img src="download (18).jpeg" alt="">
           <h1 class="h4-1">More info about us </h1>
           <h4 class="h4-1">This is a sample website created by Inervol Web Design </h4>
           <p class="p1a">&copy; 2021 Inervol Web Design LLC</p>
