--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <html lang="en" dir="ltr">
 
 
-<link rel="stylesheet" href="/home/bigmoneygelo/demo websites 1-4/ecom site/css/contact.css">
+<link rel="stylesheet" href="contact.css">
 
 
     <meta charset="utf-8">
@@ -19,8 +19,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="products.html">Products</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="/home/bigmoneygelo/demo websites 1-4/ecom site/html/about.html">About</a></li>
+       <!--<li><a href="contact.html">Contact</a></li>-->
+      <li><a href="about.html">About</a></li>
     </ul>
   </nav>
 
